<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="Bill Amount"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/billAmountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="8"
        android:inputType="number|numberDecimal"
        android:text="@string/billAmount_string_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:text="Percent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountLabel" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:width="50dp"
        android:padding="5dp"
        android:text="@string/percent_string_text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/billAmountLabel"
        app:layout_constraintTop_toTopOf="@+id/percentSeekBar" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="Tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:width="100dp"
        android:padding="5dp"
        android:text="@string/tip_string_text"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/percentSeekBar"
        app:layout_constraintStart_toStartOf="@+id/percentSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/percentSeekBar" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="Total"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:padding="5dp"
        android:text="@string/total_string_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/tipTextView" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="137dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/roundingRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tipTextView" />

    <TextView
        android:id="@+id/roundingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="39dp"
        android:padding="10dp"
        android:text="Rounding"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabel" />

    <RadioGroup
        android:id="@+id/roundingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/roundingLabel"
        app:layout_constraintTop_toBottomOf="@+id/roundingLabel">

        <RadioButton
            android:id="@+id/roundNoneRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="None" />

        <RadioButton
            android:id="@+id/roundTipRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tip" />

        <RadioButton
            android:id="@+id/roundTotalRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total" />
    </RadioGroup>

    <TextView
        android:id="@+id/splitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        android:padding="10dp"
        android:text="Split Tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundingRadioGroup" />

    <TextView
        android:id="@+id/perPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="38dp"
        android:padding="10dp"
        android:text="Per Person"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitLabel" />

    <TextView
        android:id="@+id/perPersonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:padding="5dp"
        android:text="@string/perPerson_string_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/perPersonLabel"
        app:layout_constraintEnd_toEndOf="@+id/splitSpinner" />

    <Spinner
        android:id="@+id/splitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:entries="@array/split_array"
        android:minHeight="48dp"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/splitLabel"
        app:layout_constraintStart_toEndOf="@+id/splitLabel" />

    <SeekBar
        android:id="@+id/percentSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="50dp"
        android:max="30"
        android:padding="10dp"
        android:progress="15"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>